--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
+    "google-map-react": "^1.1.4",
     "massive": "^5.8.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
