--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://localhost:4000",
+  "main": "server/server.js"
 }
