--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "auth0-js": "^9.10.2",
+    "aws-sdk": "^2.452.0",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.0.0",
@@ -16,7 +17,8 @@
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
