--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "google-map-react": "^1.1.4",
+    "google-maps-react": "^2.0.2",
     "massive": "^5.8.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.6.1",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
