--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "redux": "^4.0.1",
+    "stripe": "^6.34.0",
     "uuid": "^3.3.2"
   },
   "scripts": {
