--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "google-map-react": "^1.1.4",
     "google-maps-react": "^2.0.2",
     "massive": "^5.8.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.6.1",
