--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.4",
     "react-icons": "^3.6.1",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
